intellij/org.eclipse.xtext.core.idea.tests/src-gen/org/eclipse/xtext/enumrules/idea/parser/antlr/internal/PsiInternalEnumAndReferenceTestLanguage.g
/*
 * generated by Xtext
 */
grammar PsiInternalEnumAndReferenceTestLanguage;

options {
	superClass=AbstractPsiAntlrParser;
}

@lexer::header {
package org.eclipse.xtext.enumrules.idea.parser.antlr.internal;

// Hack: Use our own Lexer superclass by means of import. 
// Currently there is no other way to specify the superclass for the lexer.
import org.eclipse.xtext.parser.antlr.Lexer;
}

@parser::header {
package org.eclipse.xtext.enumrules.idea.parser.antlr.internal;

import org.eclipse.xtext.idea.parser.AbstractPsiAntlrParser;
import org.eclipse.xtext.enumrules.idea.lang.EnumAndReferenceTestLanguageElementTypeProvider;
import org.eclipse.xtext.idea.parser.TokenTypeProvider;
import org.eclipse.xtext.parser.antlr.XtextTokenStream;
import org.eclipse.xtext.parser.antlr.XtextTokenStream.HiddenTokens;
import org.eclipse.xtext.enumrules.services.EnumAndReferenceTestLanguageGrammarAccess;

import com.intellij.lang.PsiBuilder;
}

@parser::members {

	protected EnumAndReferenceTestLanguageGrammarAccess grammarAccess;

	protected EnumAndReferenceTestLanguageElementTypeProvider elementTypeProvider;

	public PsiInternalEnumAndReferenceTestLanguageParser(PsiBuilder builder, TokenStream input, EnumAndReferenceTestLanguageElementTypeProvider elementTypeProvider, EnumAndReferenceTestLanguageGrammarAccess grammarAccess) {
		this(input);
		setPsiBuilder(builder);
    	this.grammarAccess = grammarAccess;
		this.elementTypeProvider = elementTypeProvider;
	}

	@Override
	protected String getFirstRuleName() {
		return "EntityWithEnumAndReference";
	}

}

//Entry rule entryRuleEntityWithEnumAndReference
entryRuleEntityWithEnumAndReference:
	{ markComposite(elementTypeProvider.getEntityWithEnumAndReferenceElementType()); }
	ruleEntityWithEnumAndReference
	{ doneComposite(); }
	EOF;

// Rule EntityWithEnumAndReference
ruleEntityWithEnumAndReference@init {
}
@after {
}:
	(
		(
			(
				{
					markComposite(elementTypeProvider.getEntityWithEnumAndReference_TypeKindOfKeywordEnumRuleCall_0_0ElementType());
				}
				lv_type_0_0=ruleKindOfKeyword
				{
					doneComposite();
				}
			)
		)
		(
			(
				{
					markLeaf();
				}
				lv_name_1_0=RULE_ID
				{
					doneLeaf(lv_name_1_0, elementTypeProvider.getEntityWithEnumAndReference_NameIDTerminalRuleCall_1_0ElementType());
				}
			)
		)
		{
			markLeaf();
		}
		otherlv_2='reference'
		{
			doneLeaf(otherlv_2, elementTypeProvider.getEntityWithEnumAndReference_ReferenceKeyword_2ElementType());
		}
		(
			(
				{
					markLeaf();
				}
				otherlv_3=RULE_ID
				{
					doneLeaf(otherlv_3, elementTypeProvider.getEntityWithEnumAndReference_RefEntityWithEnumAndReferenceCrossReference_3_0ElementType());
				}
			)
		)
	)
;

// Rule KindOfKeyword
ruleKindOfKeyword:
	(
		(
			{
				markLeaf();
			}
			enumLiteral_0='kindOfKeyword'
			{
				doneLeaf(enumLiteral_0, elementTypeProvider.getKindOfKeyword_KindOfKeywordEnumLiteralDeclaration_0ElementType());
			}
		)
		    |
		(
			{
				markLeaf();
			}
			enumLiteral_1='anotherEnumLiteral'
			{
				doneLeaf(enumLiteral_1, elementTypeProvider.getKindOfKeyword_AnotherEnumLiteralEnumLiteralDeclaration_1ElementType());
			}
		)
	)
;

RULE_ID : '^'? ('a'..'z'|'A'..'Z'|'_') ('a'..'z'|'A'..'Z'|'_'|'0'..'9')*;

RULE_INT : ('0'..'9')+;

RULE_STRING : ('"' ('\\' .|~(('\\'|'"')))* '"'|'\'' ('\\' .|~(('\\'|'\'')))* '\'');

RULE_ML_COMMENT : '/*' ( options {greedy=false;} : . )*'*/';

RULE_SL_COMMENT : '//' ~(('\n'|'\r'))* ('\r'? '\n')?;

RULE_WS : (' '|'\t'|'\r'|'\n')+;

RULE_ANY_OTHER : .;
